# toy_backend

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  ruff.toml
db/: schema.sql
src/: context.py  server.py
src/api/book/: models.py  routes.py
src/api/loan/: models.py  routes.py
src/api/security/: auth.py  auth_manager.py
src/core/: config.py  db.py  logger.py
src/repositories/: book_repository.py  loan_repository.py
src/services/: book_service.py  loan_service.py
src/types/: book.py  user.py
tests/: __init__.py  test_api.py  test_security.py
tests/mocks/: book_service.py  fake_route.py
